--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<!doctype html>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  
 
-test website for Phys edu.
+</body></html>
